--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./style.css">
-        <title class="title">IdeaBox</title>
     </head>
+    <body>
+        <header>
+            <h1>IdeaBox</h1>
+        </header>
+    </body>
 
 
 
