Add top box input sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
         <header>
             <h1>IdeaBox</h1>
         </header>
+        <main>
+            <section class="top-box">
+                <form>
+                    <input type="text" name="title" id="input-1">
+                    <input type="text" name="body" id="input-2">
+                </form>
+            </section>
+        </main>
     </body>
 
 
