--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <form>
                     <input type="text" name="title" id="input-1">
                     <input type="text" name="body" id="input-2">
+                    <button class="save-button">Save</button>
                 </form>
             </section>
         </main>
