--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </header>
         <main>
             <section class="top-box">
-                <form>
+                <form class="input-form">
                     <input type="text" name="title" id="input-1">
                     <input type="text" name="body" id="input-2">
                     <button class="save-button">Save</button>
