Edit website sections dom display

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                     <button class="save-button">Save</button>
                 </form>
             </section>
+            <section class="bottom-box">
+              <form class="bottom-form">
+                <button class="SOS">HELP</button>
+              </form>
+            </section>
+
         </main>
     </body>
 
