Add labels for our 2 input boxes and updated width

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <main>
             <section class="top-box">
                 <form class="input-form">
-                    <input type="text" name="title" id="input-1">
-                    <input type="text" name="body" id="input-2">
+                    <label>Title<input type="text" name="title" id="input-1"></label>
+                   <label>Body<input type="text" name="body" id="input-2"></label>
                     <button class="save-button">Save</button>
                 </form>
             </section>
