--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <main>
             <section class="top-box">
                 <form class="input-form">
-                    <label>Title<input type="text" name="title" id="input-1"></label>
+                    <label class="input-1">Title<input type="text" name="title" id="input-1"></label>
                    <label>Body<input type="text" name="body" id="input-2"></label>
                     <button class="save-button">Save</button>
                 </form>
