add notes from meeting with Shauna

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
                 </form>
             </section>
             <section class="bottom-box">
+                <div class="card-container">
+            </div>
             </section>
         </main>
         <script src="./main.js"></script>
