--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <section class="top-box">
                 <form class="input-form">
                     <label class="input-1">Title<input type="text" name="title" id="input-1" required></label>
-                    <label>Body<input type="text" name="body" id="input-2" required></label>
+                    <label class="input-2">Body<textarea type="text" name="body" id="input-2" required></textarea></label>
                     <button class="save-button ">Save</button>
                 </form>
             </section>
