Fix the disable save button on page load

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <form class="input-form">
                     <label class="input-1">Title<input type="text" name="title" id="input-1" required></label>
                     <label class="input-2">Body<textarea type="text" name="body" id="input-2" required></textarea></label>
-                    <button class="save-button ">Save</button>
+                    <button class="save-button disabled">Save</button>
                 </form>
             </section>
             <section class="bottom-box">
