--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <header>
             <h1>IdeaBox</h1>
+            <button id="show-starred-button">Show Starred Ideas</button>
         </header>
         <main>
             <section class="top-box">
