Create functionality to showAll function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <header>
             <h1>IdeaBox</h1>
             <button id="show-starred-button">Show Starred Ideas</button>
+            <button id="show-saved hidden">Show All</button>
         </header>
         <main>
             <section class="top-box">
