Update class names

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <header>
             <h1>IdeaBox</h1>
-            <button id="show-starred-button">Show Starred Ideas</button>
-            <button id="show-all hidden">Show All</button>
+            <button class="show-starred">Show Starred Ideas</button>
+            <button class="show-all hidden">Show All</button>
         </header>
         <main>
             <section class="top-box">
