--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        <header>
+        <aside>
             <h1>IdeaBox</h1>
             <button class="show-starred">Show Starred Ideas</button>
             <button class="show-all hidden">Show All</button>
-        </header>
+        </aside>
         <main>
             <section class="top-box">
                 <form class="input-form">
